# tradify_automatization

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/: __init__.py
clients/: __init__.py  baselinker.py
core/: auth.py  config.py  helpers.py  utils.py
domains/: __init__.py
domains/invoice_enrichment/: __init__.py  api.py  document_metadata.py  invoice_parser.py  models.py  pdf_documents.py
domains/invoice_enrichment/application/: __init__.py  errors.py  invoice_processing_pipeline.py  sources.py
domains/invoice_enrichment/data/: categories.json  customs_rules.json
domains/invoice_enrichment/goods_description/: __init__.py  constraints.py  diagnostics.py  draft.py  dto.py  gateway.py  generator.py  models.py  normalizer.py  prompts.py  resolver.py  rule_resolver.py  rules.py  validator.py
domains/invoice_enrichment/goods_description/ai/: __init__.py  gateway.py  response_parser.py  response_schemas.py
domains/invoice_enrichment/goods_description/generation/: __init__.py  assembler.py  (+8 more)
domains/invoice_enrichment/invoice_pdf_parser/: __init__.py  columns.py  headers.py  items.py  models.py  parser.py  rows.py  validation.py
domains/invoice_enrichment/pdf_document/: __init__.py  builder.py  layout.py  merge_service.py  models.py  text.py  totals.py
models/: __init__.py  invoice.py
rules/: goods_description_prompt.py  goods_description_rules.py
rules/data/: brands.json
services/: __init__.py  generate_invoice.py  goods_description.py  goods_rule_resolver.py  invoice_parser.py  pdf_documents.py
(+10 files in other folders)
